fix: hide nav when on mobile

--- a/components/Main/Section/index.styl
+++ b/components/Main/Section/index.styl
@@ -7,6 +7,9 @@
     border-top 0
     background-color #f7f7f7
     padding 2u
+    display none
+    +tablet()
+      display flex
   +tablet()
      padding 8u 6u 4u
   +desktop()
